# ouro-ops

./: .gitignore  LICENSE  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
OuroOps/: ContentView.swift  OuroOpsApp.swift
OuroOps.xcodeproj/: project.pbxproj
ansible/playbooks/: deploy.yml
ansible/roles/cardano-node/tasks/: main.yml
ansible/roles/cardano-node/templates/: topology-p2p.json.j2
ansible/roles/common/tasks/: main.yml
ansible/roles/hardening/handlers/: main.yml
ansible/roles/hardening/tasks/: main.yml
ansible/roles/safe-validate/tasks/: main.yml
docs/detail-design/: v1.0.md
docs/development-plan/: v1.0.md
docs/high-level-design/: v1.0.md
docs/prd/: v1.0.md
docs/review/: v1.0.md
docs/test-cases/: v1.0.md
docs/test-results/: phase2-v1.0.md  phase3-v1.0.md
sidecar/: pyproject.toml
sidecar/src/: runner_bridge.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: error.rs  keychain.rs  lib.rs  main.rs
src-tauri/src/commands/: deploy.rs  machine.rs  mod.rs  pool.rs
src-tauri/src/db/: mod.rs  repo.rs  schema.rs
src-tauri/src/sidecar/: mod.rs  runner.rs
src/components/: ConfirmModal.tsx  Layout.tsx  Sidebar.tsx  TaskLogStream.tsx
src/lib/: ipc.ts  types.ts
src/pages/: Dashboard.tsx  DeployWizard.tsx  MachineManager.tsx  Settings.tsx  SetupWizard.tsx
